@@ -1,4 +1,5 @@
 AC_INIT(fuse, 2.5.0-pre0)
+AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(include/config.h)
 
@@ -12,6 +13,12 @@ if test -z "$mkdir_p"; then
 	mkdir_p="../mkinstalldirs"
 	AC_SUBST(mkdir_p)
 fi
+
+case $target_os in
+     *linux*)	arch=linux;;
+     *bsd*)	arch=bsd;;
+     *)		arch=unknown;;
+esac
 
 if test "$ac_env_CFLAGS_set" != set; then
 	CFLAGS="-Wall -W -g -O2"
@@ -29,16 +36,22 @@ AC_ARG_ENABLE(example,
 AC_ARG_ENABLE(mtab,
 	[  --disable-mtab          Disable and ignore usage of /etc/mtab ])
 
+AC_ARG_WITH(pkgconfigdir,
+            [  --with-pkgconfigdir=DIR      pkgconfig file in DIR @<:@LIBDIR/pkgconfig@:>@],
+            [pkgconfigdir=$withval],
+            [pkgconfigdir='${libdir}/pkgconfig'])
+AC_SUBST(pkgconfigdir)
+
 subdirs2="include"
 
-if test "$enable_kernel_module" != "no"; then
+if test "$arch" = linux -a "$enable_kernel_module" != "no"; then
 	AC_CONFIG_SUBDIRS(kernel)
 fi
 
 if test "$enable_lib" != "no"; then
 	subdirs2="$subdirs2 lib";
 fi
-if test "$enable_util" != "no"; then
+if test "$arch" = linux -a "$enable_util" != "no"; then
 	subdirs2="$subdirs2 util";
 fi
 if test "$enable_example" != "no"; then
@@ -47,7 +60,7 @@ fi
 if test "$enable_mtab" = "no"; then
 	AC_DEFINE(IGNORE_MTAB, 1, [Don't update /etc/mtab])
 fi
-AC_CHECK_FUNCS([fork setxattr])
+AC_CHECK_FUNCS([fork setxattr fdatasync])
 AC_CHECK_MEMBERS([struct stat.st_atim])
 
 if test -z "$MOUNT_FUSE_PATH"; then
@@ -60,6 +73,9 @@ fi
 AC_SUBST(UDEV_RULES_PATH)
 
 AC_SUBST(subdirs2)
+
+AM_CONDITIONAL(LINUX, test "$arch" = linux)
+AM_CONDITIONAL(BSD, test "$arch" = bsd)
 
 AC_CONFIG_FILES([fuse.pc Makefile lib/Makefile util/Makefile example/Makefile include/Makefile])
 AC_OUTPUT
