@@ -1,3 +1,7 @@
+2005-11-16  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Merge library part of FreeBSD port.  Patch by Csaba Henk
+
 2005-11-11  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Use 64bit type for file handle, so the full range supported by
